Fix tooltip not showing up when input has-error

--- a/app/assets/stylesheets/newflow_layout.scss
+++ b/app/assets/stylesheets/newflow_layout.scss
@@ -64,6 +64,10 @@ body {
     }
 }
 
+input.has-error {
+    @extend %has-error;
+}
+
 // Add a star * to form fields that are required
 label.required::after {
     content: " *";
